AIP: automatické napojení na JP podle UUID místo podle identifikátoru z EAD
Napojení přijatého AIPu na JP se hledá podle UUID: nejprve UUID balíčku, pak
UUID úrovní z logické strukturální mapy METS shora dolů a nakonec UUID
reprezentací. Vyhrává první UUID, které patří JP daného fondu, tedy nejvyšší
část AIPu, kterou už ELZA popisuje. UUID jsou v AIPu zapsaná s předponou
"uuid-", JP je nese bez ní.

Nahrazuje dosavadní hledání podle unitid z EAD proti prvku popisu
ZP2015_OTHERID_SOURCEID - takové přímé párování zatím neexistuje. Ruší se s ním
i konfigurace elza.da.auto-link, mapování už se nenastavuje.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>