@@ -11,65 +11,58 @@ import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.Set;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
 
-import cz.tacr.elza.config.da.DaAutoLinkConfig;
-import cz.tacr.elza.core.data.ItemType;
-import cz.tacr.elza.core.data.StaticDataProvider;
-import cz.tacr.elza.core.data.StaticDataService;
 import cz.tacr.elza.domain.ArrDaLink;
-import cz.tacr.elza.domain.ArrDescItem;
 import cz.tacr.elza.domain.ArrFund;
 import cz.tacr.elza.domain.ArrFundVersion;
+import cz.tacr.elza.domain.ArrNode;
 import cz.tacr.elza.domain.DaAip;
 import cz.tacr.elza.domain.DaAipState;
-import cz.tacr.elza.domain.RulItemSpec;
-import cz.tacr.elza.domain.RulItemType;
 import cz.tacr.elza.repository.AipStateRepository;
 import cz.tacr.elza.repository.ArrDaLinkRepository;
-import cz.tacr.elza.repository.DescItemRepository;
+import cz.tacr.elza.repository.NodeRepository;
 import cz.tacr.elza.service.ArrangementInternalService;
 import cz.tacr.elza.service.eventnotification.EventNotificationService;
 import cz.tacr.elza.service.eventnotification.events.EventIdNodeIdInVersion;
 
 /**
- * Unit tests of the node lookup of {@link DaAipAutoLinkService}; @Transactional is an AOP
+ * Unit tests of the UUID matching of {@link DaAipAutoLinkService}; @Transactional is an AOP
  * concern and is not exercised.
  */
 public class DaAipAutoLinkServiceTest {
 
     private static final int AIP_ID = 11;
+    private static final String PACKAGE_UUID = "2fde031b-0cac-4e5a-b04a-8ad8da08bed4";
+    private static final String LEVEL_UUID = "2e9d2e65-b2e9-4e5e-ad84-1730553f3be3";
+    private static final String REPRESENTATION_UUID = "506b5ba5-b9a4-4907-b0f2-f87e7db046e3";
 
     private DaAipAutoLinkService service;
 
     private DaService daService;
     private AipStateRepository aipStateRepository;
     private ArrDaLinkRepository daLinkRepository;
-    private DescItemRepository descItemRepository;
+    private NodeRepository nodeRepository;
     private ArrangementInternalService arrangementInternalService;
     private EventNotificationService eventNotificationService;
 
     private DaAip aip;
     private DaAipState aipState;
     private ArrFund fund;
-    private RulItemType itemType;
-    private RulItemSpec itemSpec;
 
     @BeforeEach
     void setUp() {
         daService = mock(DaService.class);
         aipStateRepository = mock(AipStateRepository.class);
         daLinkRepository = mock(ArrDaLinkRepository.class);
-        descItemRepository = mock(DescItemRepository.class);
+        nodeRepository = mock(NodeRepository.class);
         arrangementInternalService = mock(ArrangementInternalService.class);
         eventNotificationService = mock(EventNotificationService.class);
 
@@ -78,7 +71,7 @@ public class DaAipAutoLinkServiceTest {
 
         aip = new DaAip();
         aip.setAipId(AIP_ID);
-        aip.setCode("aip-code");
+        aip.setCode("uuid-" + PACKAGE_UUID);
         aipState = new DaAipState();
         aipState.setDaAip(aip);
         aipState.setFund(fund);
@@ -86,18 +79,7 @@ public class DaAipAutoLinkServiceTest {
         when(daService.findAipById(AIP_ID)).thenReturn(aip);
         when(aipStateRepository.findByDaAipAndDeleteChangeIsNull(aip)).thenReturn(aipState);
         when(daLinkRepository.findByAipIdAndDeleteChangeIsNull(AIP_ID)).thenReturn(Collections.emptyList());
-
-        itemType = new RulItemType();
-        itemType.setItemTypeId(100);
-        itemSpec = new RulItemSpec();
-        itemSpec.setItemSpecId(200);
-        ItemType type = mock(ItemType.class);
-        when(type.getEntity()).thenReturn(itemType);
-        when(type.getItemSpecByCode("ZP2015_OTHERID_SOURCEID")).thenReturn(itemSpec);
-        StaticDataProvider sdp = mock(StaticDataProvider.class);
-        when(sdp.getItemTypeByCode("ZP2015_OTHER_ID")).thenReturn(type);
-        StaticDataService staticDataService = mock(StaticDataService.class);
-        when(staticDataService.getData()).thenReturn(sdp);
+        when(nodeRepository.findByFundAndUuidIn(any(), anyCollection())).thenReturn(Collections.emptyList());
 
         ArrFundVersion fundVersion = new ArrFundVersion();
         fundVersion.setFundVersionId(7);
@@ -114,34 +96,32 @@ public class DaAipAutoLinkServiceTest {
         setField(service, "daService", daService);
         setField(service, "aipStateRepository", aipStateRepository);
         setField(service, "daLinkRepository", daLinkRepository);
-        setField(service, "descItemRepository", descItemRepository);
-        setField(service, "staticDataService", staticDataService);
+        setField(service, "nodeRepository", nodeRepository);
         setField(service, "arrangementInternalService", arrangementInternalService);
         setField(service, "eventNotificationService", eventNotificationService);
-        setField(service, "config", new DaAutoLinkConfig());
     }
 
-    private static ArrDescItem itemOfNode(int nodeId) {
-        ArrDescItem item = mock(ArrDescItem.class);
-        when(item.getNodeId()).thenReturn(nodeId);
-        return item;
+    private static ArrNode node(int nodeId, String uuid) {
+        ArrNode node = new ArrNode();
+        node.setNodeId(nodeId);
+        node.setUuid(uuid);
+        return node;
+    }
+
+    /** The UUIDs as {@link AipNodeUuids} produces them: package, levels, representations. */
+    private static List<String> uuids() {
+        return List.of(PACKAGE_UUID, LEVEL_UUID, REPRESENTATION_UUID);
     }
 
     @Test
-    void linkReceivedAip_singleMatchingNode_attachesAndNotifies() {
-        List<ArrDescItem> items = List.of(itemOfNode(5), itemOfNode(5));
-        when(descItemRepository.findOpenByFundTypeSpecAndStringValues(eq(fund), eq(itemType), eq(itemSpec), anyCollection()))
-                .thenReturn(items);
+    void attachesToTheNodeOfThePackageUuid() {
+        when(nodeRepository.findByFundAndUuidIn(eq(fund), anyCollection()))
+                .thenReturn(List.of(node(5, PACKAGE_UUID)));
 
-        Optional<ArrDaLink> link = service.linkReceivedAip(AIP_ID, Set.of("eSSL:DOC-1"));
+        Optional<ArrDaLink> link = service.linkReceivedAip(AIP_ID, uuids());
 
         assertTrue(link.isPresent());
         verify(daService).connectToJP(5, AIP_ID);
-
-        @SuppressWarnings("unchecked")
-        ArgumentCaptor<Collection<String>> values = ArgumentCaptor.forClass(Collection.class);
-        verify(descItemRepository).findOpenByFundTypeSpecAndStringValues(eq(fund), eq(itemType), eq(itemSpec), values.capture());
-        assertEquals(Set.of("eSSL:DOC-1", "aip-code"), Set.copyOf(values.getValue()));
 
         ArgumentCaptor<EventIdNodeIdInVersion> event = ArgumentCaptor.forClass(EventIdNodeIdInVersion.class);
         verify(eventNotificationService).publishEvent(event.capture());
@@ -149,48 +129,75 @@ public class DaAipAutoLinkServiceTest {
     }
 
     @Test
-    void linkReceivedAip_noMatchingNode_leavesAipUnattached() {
-        when(descItemRepository.findOpenByFundTypeSpecAndStringValues(eq(fund), eq(itemType), eq(itemSpec), anyCollection()))
-                .thenReturn(Collections.emptyList());
+    void attachesToTheLevelWhenThePackageItselfIsNotDescribed() {
+        when(nodeRepository.findByFundAndUuidIn(eq(fund), anyCollection()))
+                .thenReturn(List.of(node(6, LEVEL_UUID)));
 
-        assertFalse(service.linkReceivedAip(AIP_ID, Set.of("unknown")).isPresent());
+        assertTrue(service.linkReceivedAip(AIP_ID, uuids()).isPresent());
+
+        verify(daService).connectToJP(6, AIP_ID);
+    }
+
+    @Test
+    void attachesToTheRepresentationAsTheLastResort() {
+        when(nodeRepository.findByFundAndUuidIn(eq(fund), anyCollection()))
+                .thenReturn(List.of(node(7, REPRESENTATION_UUID)));
+
+        assertTrue(service.linkReceivedAip(AIP_ID, uuids()).isPresent());
+
+        verify(daService).connectToJP(7, AIP_ID);
+    }
+
+    @Test
+    void theOutermostMatchWinsWhenSeveralPartsAreDescribed() {
+        // the repository returns them in an arbitrary order, the matching order decides
+        when(nodeRepository.findByFundAndUuidIn(eq(fund), anyCollection()))
+                .thenReturn(List.of(node(7, REPRESENTATION_UUID), node(6, LEVEL_UUID)));
+
+        assertTrue(service.linkReceivedAip(AIP_ID, uuids()).isPresent());
+
+        verify(daService).connectToJP(6, AIP_ID);
+    }
+
+    @Test
+    void noMatchingNodeLeavesTheAipUnattached() {
+        assertFalse(service.linkReceivedAip(AIP_ID, uuids()).isPresent());
+
         verify(daService, never()).connectToJP(any(), any());
     }
 
     @Test
-    void linkReceivedAip_severalMatchingNodes_leavesAipUnattached() {
-        List<ArrDescItem> items = List.of(itemOfNode(5), itemOfNode(6));
-        when(descItemRepository.findOpenByFundTypeSpecAndStringValues(eq(fund), eq(itemType), eq(itemSpec), anyCollection()))
-                .thenReturn(items);
+    void aipWithoutUuidsIsSkipped() {
+        assertFalse(service.linkReceivedAip(AIP_ID, List.of()).isPresent());
 
-        assertFalse(service.linkReceivedAip(AIP_ID, Set.of("eSSL:DOC-1")).isPresent());
-        verify(daService, never()).connectToJP(any(), any());
+        verify(nodeRepository, never()).findByFundAndUuidIn(any(), anyCollection());
     }
 
     @Test
-    void linkReceivedAip_alreadyLinked_isSkipped() {
+    void alreadyLinkedAipIsSkipped() {
         when(daLinkRepository.findByAipIdAndDeleteChangeIsNull(AIP_ID)).thenReturn(List.of(new ArrDaLink()));
 
-        assertFalse(service.linkReceivedAip(AIP_ID, Set.of("eSSL:DOC-1")).isPresent());
-        verify(descItemRepository, never()).findOpenByFundTypeSpecAndStringValues(any(), any(), any(), anyCollection());
+        assertFalse(service.linkReceivedAip(AIP_ID, uuids()).isPresent());
+
+        verify(nodeRepository, never()).findByFundAndUuidIn(any(), anyCollection());
     }
 
     @Test
-    void linkReceivedAip_withoutFund_isSkipped() {
+    void aipWithoutFundIsSkipped() {
         aipState.setFund(null);
 
-        assertFalse(service.linkReceivedAip(AIP_ID, Set.of("eSSL:DOC-1")).isPresent());
-        verify(descItemRepository, never()).findOpenByFundTypeSpecAndStringValues(any(), any(), any(), anyCollection());
+        assertFalse(service.linkReceivedAip(AIP_ID, uuids()).isPresent());
+
+        verify(nodeRepository, never()).findByFundAndUuidIn(any(), anyCollection());
     }
 
     @Test
-    void linkReceivedAips_failureOfOneAipDoesNotStopOthers() {
+    void failureOfOneAipDoesNotStopTheOthers() {
         when(daService.findAipById(12)).thenThrow(new IllegalStateException("boom"));
-        List<ArrDescItem> items = List.of(itemOfNode(5));
-        when(descItemRepository.findOpenByFundTypeSpecAndStringValues(eq(fund), eq(itemType), eq(itemSpec), anyCollection()))
-                .thenReturn(items);
+        when(nodeRepository.findByFundAndUuidIn(eq(fund), anyCollection()))
+                .thenReturn(List.of(node(5, PACKAGE_UUID)));
 
-        int linked = service.linkReceivedAips(Map.of(12, Set.of("x"), AIP_ID, Set.of("eSSL:DOC-1")));
+        int linked = service.linkReceivedAips(Map.of(12, uuids(), AIP_ID, uuids()));
 
         assertEquals(1, linked);
     }
